[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1"
bytes = "1.6.0"
oas3 = "0.7"
tower-http = {version="0.5.2",features = ["trace"]}
serde = "1.0.203"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
